# DjangoHub

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
MyTennisClub/: asgi.py  settings.py  urls.py  wsgi.py
members/: urls.py  views.py
members/templates/: 404.html  all_members.html  details.html  footer.html  main.html  master.html  template.html
productionfiles/: myglobal.css
